Fixed main body font and alignment

--- a/site/style.css
+++ b/site/style.css
@@ -57,6 +57,13 @@
             .nav button:hover{
                 background-color: aqua;
             }
+
+            .welcome {
+                color: #000000;
+                font-family: 'Nintendo';
+                font-size: 24;
+            }
+
             * {
                 box-sizing: border-box;
             }
